--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,8 @@ tokio-util = { version = "0.7", features = ["codec"] }
 thiserror = "1.0.58"
 strum_macros = "0.26"
 futures = "0.3.30"
+serialport = "4.2.0"
+
+[dev-dependencies]
+hex = "0.4"
+tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
