--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -29,6 +29,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Install dependencies
+      run: |
+          sudo sed -i 's/azure.archive.ubuntu.com/archive.ubuntu.com/' /etc/apt/sources.list
+          sudo apt-get -qq update
+          sudo apt install -qq -y libudev-dev
     - uses: actions/checkout@v4
     - name: Build
       run: cargo build --verbose
@@ -40,6 +45,7 @@ jobs:
     if: github.ref == 'refs/heads/master'
     environment: prod
     needs: [build-and-test, lints]
+    
     steps:
     - uses: actions/checkout@v4
     - name: Publish new release
