--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -1,9 +1,9 @@
-name: Rust
+name: Checks
 
 on:
-  push:
-    branches: [ "master" ]
   pull_request:
+    branches: [ "master" ]
+  push:
     branches: [ "master" ]
 
 env:
@@ -39,15 +39,3 @@ jobs:
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
-
-  publish:
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/master'
-    environment: prod
-    needs: [build-and-test, lints]
-    
-    steps:
-    - uses: actions/checkout@v4
-    - name: Publish new release
-      run: cargo publish --token ${{ secrets.CRATES_IO_TOKEN }}
-  
